--- a/ideacion/plantilla_latex/main.tex
+++ b/ideacion/plantilla_latex/main.tex
@@ -62,7 +62,7 @@ Unas de las plataformas para el diseño serian:
 Tinkercad.com, en este entorno seria util para la creacion de graficos 2d o 3d para en la implementacion del proyecto.
 
 \begin{figure}[h]
-\includegraphics[width=5cm]{plantilla_latex/imagenes/tinkercad_1.png}
+\includegraphics[width=5cm]{ideacion/plantilla_latex/imagenes/tinkercad_1.png}
 \centering
 \caption{imagen didactica}
 \label{fig:cpplogo}
@@ -78,7 +78,7 @@ En las Figuras (\ref{fig:Air-Hockey}), (\ref{fig:air-menu}), se   presentan imag
 
 \label{imagenes}
 \begin{figure}[h]
-\includegraphics[width=5cm]{plantilla_latex/imagenes/Air-Hockey.png}
+\includegraphics[width=5cm]{imagenes/Air-Hockey.png}
 \centering
 \caption{patio de juego}
 \label{fig:Air-Hockey}
@@ -87,7 +87,7 @@ En las Figuras (\ref{fig:Air-Hockey}), (\ref{fig:air-menu}), se   presentan imag
 
 \label{imagenes}
 \begin{figure}[h]
-\includegraphics[width=5cm]{plantilla_latex/imagenes/air-menu.jpg}
+\includegraphics[width=5cm]{ideacion/plantilla_latex/imagenes/air-menu.jpg}
 \centering
 \caption{ menú}
 \label{fig:air-menu}
